add default RewriteBase

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,6 +2,7 @@ AddDefaultCharset utf-8
 Options -Indexes
 
 RewriteEngine on
+RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond $1 !^(index\.php)
