update league/oauth2-client to master for new authorization url function

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 		"twig/twig": "1.*",
 		"twig/extensions": "1.*",
 		"lightopenid/lightopenid": "0.7.*",
-		"league/oauth2-client": "0.1"
+		"league/oauth2-client": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
