add name and verison to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+	"name": "beheh/lorry",
+	"description": "A web platform to host and showcase Clonk addons and their dependencies.",
 	"type": "project",
 	"require": {
 		"twig/twig": "1.*",
