--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "beheh/lorry",
 	"description": "A web platform to host and showcase Clonk addons and their dependencies.",
 	"type": "project",
+	"license": "GPL-3.0",
 	"require": {
 		"twig/twig": "1.*",
 		"twig/extensions": "1.*",
