--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"twig/extensions": "1.*",
 		"swiftmailer/swiftmailer": "v5.0.3",
 		"lightopenid/lightopenid": "0.7.*",
-		"league/oauth2-client": "dev-master"
+		"league/oauth2-client": "dev-master",
+		"analog/analog": "1.0.4-stable"
 	},
 	"autoload": {
 		"psr-4": {
