migrate to yaml config

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"swiftmailer/swiftmailer": "v5.1.0",
 		"lightopenid/lightopenid": "~0.7",
 		"league/oauth2-client": "0.3.0",
-		"analog/analog": "~1.0.4-stable"
+		"analog/analog": "~1.0.4-stable",
+		"symfony/yaml": "~2.4"
 	},
 	"autoload": {
 		"psr-4": {
