--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "beheh/lorry",
+	"name": "beheh/clonklorry",
 	"description": "A web platform to host and showcase Clonk addons and their dependencies.",
 	"type": "project",
 	"license": "GPL-3.0",
