--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"type": "project",
 	"license": "GPL-3.0",
 	"require": {
+		"php": ">= 5.6",
 		"twig/twig": "~1.15",
 		"twig/extensions": "~1.0.1",
 		"swiftmailer/swiftmailer": "v5.1.0",
