--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
 	"license": "GPL-3.0",
 	"require": {
 		"php": ">= 5.6",
-		"twig/twig": "~1.15",
-		"twig/extensions": "~1.0.1",
-		"swiftmailer/swiftmailer": "v5.1.0",
+		"twig/twig": "~1.16",
+		"twig/extensions": "~1.2",
+		"swiftmailer/swiftmailer": "~5.3",
 		"lightopenid/lightopenid": "~0.7",
 		"league/oauth2-client": "0.4.0",
 		"analog/analog": "~1.0.4-stable",
-		"symfony/yaml": "~2.4",
-		"symfony/finder": "~2.4"
+		"symfony/yaml": "~2.5",
+		"symfony/finder": "~2.5"
 	},
 	"autoload": {
 		"psr-4": {
