add redis and resque-php for job management

--- a/app/config/lorry.example.yml
+++ b/app/config/lorry.example.yml
@@ -42,6 +42,9 @@ persistence:
     username: lorry
     password: lorry
 
+redis:
+    dsn: unix:/home/lorry/.redis/sock
+
 mail:
     smtp-host: example.com
     smtp-port: 587
