--- a/app/config/lorry.example.yml
+++ b/app/config/lorry.example.yml
@@ -56,6 +56,11 @@ mail:
     password: lorry
     from: lorry@example.com
 
+# content delivery
+cdn:
+    key:
+    secret:
+
 # oauth secrets
 oauth:
     google:
