--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
 	"require": {
 		"php": ">= 5.6",
 		"ext-json": "*",
-		"ext-gettext": "*",
 		"ext-pdo": "*",
 		"ext-openssl": "*",
 		"ext-curl": "*",
@@ -14,7 +13,7 @@
 		"twig/extensions": "~1.2",
 		"swiftmailer/swiftmailer": "~5.3",
 		"lightopenid/lightopenid": "~0.7",
-		"league/oauth2-client": "~0.6",
+		"league/oauth2-client": "~0.7",
 		"analog/analog": "~1.0.4-stable",
 		"symfony/yaml": "~2.5",
 		"symfony/finder": "~2.5",
@@ -22,6 +21,7 @@
 		"aws/aws-sdk-php": "~2"
     },
 	"suggest": {
+		"ext-gettext": "Localisation",
 		"ext-http": "More reliable language negotiation"
 	},
 	"repositories": [
