remove custom php-resque fork

--- a/app/config/lorry.example.yml
+++ b/app/config/lorry.example.yml
@@ -45,7 +45,7 @@ persistence:
 
 # job queue and underlying redis database
 job:
-    dsn: unix:/home/lorry/.redis/sock
+    dsn: /home/lorry/.redis/sock
 
 # for outgoing mails
 mail:
