--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,13 @@
 		"analog/analog": "~1.0.4-stable",
 		"symfony/yaml": "~2.5",
 		"symfony/finder": "~2.5",
-        "chrisboulton/php-resque": "dev-unixsocket",
+        "chrisboulton/php-resque": "dev-master",
 		"aws/aws-sdk-php": "~2"
     },
 	"suggest": {
 		"ext-gettext": "Localisation",
 		"ext-http": "More reliable language negotiation"
 	},
-	"repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/beheh/php-resque"
-        }
-    ],
 	"autoload": {
 		"psr-4": {
 			"Lorry\\": "src/"
