--- a/web/resources/bootstrap/config.json
+++ b/web/resources/bootstrap/config.json
@@ -1,12 +1,12 @@
 {
   "vars": {
     "@gray-base": "#000",
-    "@gray-darker": "lighten(#000, 13.5%)",
-    "@gray-dark": "lighten(#000, 20%)",
-    "@gray": "lighten(#000, 33.5%)",
-    "@gray-light": "lighten(#000, 60%)",
-    "@gray-lighter": "lighten(#000, 93.5%)",
-    "@brand-primary": "#428bca",
+    "@gray-darker": "lighten(@gray-base, 13.5%)",
+    "@gray-dark": "lighten(@gray-base, 20%)",
+    "@gray": "lighten(@gray-base, 33.5%)",
+    "@gray-light": "lighten(@gray-base, 46.7%)",
+    "@gray-lighter": "lighten(@gray-base, 93.5%)",
+    "@brand-primary": "darken(#428bca, 6.5%)",
     "@brand-success": "#5cb85c",
     "@brand-info": "#5bc0de",
     "@brand-warning": "#f0ad4e",
@@ -424,5 +424,5 @@
     "scrollspy.js",
     "transition.js"
   ],
-  "customizerUrl": "http://getbootstrap.com/customize/?id=7f8ec36d7bd84ba71289"
+  "customizerUrl": "http://getbootstrap.com/customize/?id=bbae8000468f87c44a60"
 }
