--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 		"symfony/yaml": "~2.6",
 		"symfony/finder": "~2.6",
 		"symfony/console": "~2.6",
-        "chrisboulton/php-resque": "dev-master",
+        "chrisboulton/php-resque": "dev-master as 1.2.x-dev",
 		"aura/sqlquery": "~2.1",
 		"aws/aws-sdk-php": "~2"
     },
