--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"analog/analog": "~1.0.4-stable",
 		"symfony/yaml": "~2.6",
 		"symfony/console": "~2.6",
-        "chrisboulton/php-resque": "dev-master as 1.2.x-dev",
+        "vend/resque": "~2.1",
+		"predis/predis": "~1.0",
 		"aura/sqlquery": "~2.1",
 		"aws/aws-sdk-php": "~2",
 		"league/flysystem": "~1.0"
