--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
 		"league/flysystem": "~1.0",
 		"container-interop/container-interop": "~1.0",
 		"mnapoli/php-di": "~4.0",
-		"symfony/http-foundation": "~2.6"
+		"symfony/http-foundation": "~2.6",
+		"beheh/flaps": "dev-master"
     },
 	"suggest": {
 		"ext-gettext": "Localisation",
