--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		"container-interop/container-interop": "~1.0",
 		"mnapoli/php-di": "~4.0",
 		"symfony/http-foundation": "~2.6",
-		"beheh/flaps": "dev-master"
+		"beheh/flaps": "0.1.0"
     },
 	"suggest": {
 		"ext-gettext": "Localisation",
