replace OpenID- with GitHub-authentication

--- a/composer.json
+++ b/composer.json
@@ -11,22 +11,21 @@
 		"ext-curl": "*",
 		"twig/twig": "~1.18",
 		"twig/extensions": "~1.2",
-		"swiftmailer/swiftmailer": "~5.3",
-		"lightopenid/lightopenid": "~0.7",
-		"league/oauth2-client": "~0.7",
+		"swiftmailer/swiftmailer": "~5.4",
+		"league/oauth2-client": "~0.10",
 		"psr/log": "~1.0",
-		"monolog/monolog": "~1.12",
+		"monolog/monolog": "~1.13",
 		"symfony/yaml": "~2.6",
 		"symfony/console": "~2.6",
         "vend/resque": "~2.1",
 		"predis/predis": "~1.0",
-		"aura/sqlquery": "~2.1",
+		"aura/sqlquery": "~2.4",
 		"aws/aws-sdk-php": "~2",
 		"league/flysystem": "~1.0",
 		"container-interop/container-interop": "~1.0",
 		"mnapoli/php-di": "~4.0",
 		"symfony/http-foundation": "~2.6",
-		"beheh/flaps": "0.1.0"
+		"beheh/flaps": "~0.1"
     },
 	"suggest": {
 		"ext-gettext": "Localisation",
