update library versions

--- a/composer.json
+++ b/composer.json
@@ -10,23 +10,23 @@
 		"ext-openssl": "*",
 		"ext-curl": "*",
 		"twig/twig": "~1.18",
-		"twig/extensions": "~1.2",
-		"swiftmailer/swiftmailer": "~5.4",
-		"league/oauth2-client": "~0.10",
-		"psr/log": "~1.0",
-		"monolog/monolog": "~1.13",
-		"symfony/yaml": "~2.6",
-		"symfony/console": "~2.6",
-        "vend/resque": "~2.1",
-		"predis/predis": "~1.0",
-		"respect/validation": "~0.7",
-		"aws/aws-sdk-php": "~2",
-		"league/flysystem": "~1.0",
-		"container-interop/container-interop": "~1.0",
-		"mnapoli/php-di": "~4.0",
-		"symfony/http-foundation": "~2.6",
-		"doctrine/orm": "~2.5",
-		"beheh/flaps": "~0.1"
+		"twig/extensions": "~1.2.0",
+		"swiftmailer/swiftmailer": "~5.4.0",
+		"league/oauth2-client": "~0.11.0",
+		"psr/log": "1.0.0",
+		"monolog/monolog": "~1.13.1",
+		"symfony/yaml": "~2.7.0",
+		"symfony/console": "~2.7.0",
+        "vend/resque": "~2.1.1",
+		"predis/predis": "~1.0.1",
+		"respect/validation": "~0.9.2",
+		"aws/aws-sdk-php": "~3.0.3",
+		"league/flysystem": "~1.0.3",
+		"container-interop/container-interop": "~1.1.0",
+		"mnapoli/php-di": "~4.4.7",
+		"symfony/http-foundation": "~2.7.0",
+		"doctrine/orm": "~2.5.0",
+		"beheh/flaps": "~0.1.0"
     },
 	"suggest": {
 		"ext-gettext": "Localisation",
