--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: php
 php:
-  - "5.6"
+  - 5.6
+  - 7.0
+  - hhvm
+
+matrix:
+    allow_failures:
+        php:
+            - 7.0
+            - hhvm
