improve .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ php:
 
 matrix:
     allow_failures:
-        php:
-            - 7.0
-            - hhvm
+        - php: 7.0
+        - php: hhvm
 
 before_script:
-  - composer install
+  - composer install --prefer-source
