update PHP-DI to version 5

--- a/composer.json
+++ b/composer.json
@@ -9,22 +9,23 @@
 		"ext-pdo": "*",
 		"ext-openssl": "*",
 		"ext-curl": "*",
+		"container-interop/container-interop": "~1.1.0",
+		"php-di/php-di": "~5.0.0",
+		"ocramius/proxy-manager": "~1.0",
+		"psr/log": "1.0.0",
+		"monolog/monolog": "~1.13.1",
+		"doctrine/orm": "~2.5.0",
+		"symfony/http-foundation": "~2.7.0",
+		"symfony/yaml": "~2.7.0",
+		"symfony/console": "~2.7.0",
 		"twig/twig": "~1.18",
 		"twig/extensions": "~1.2.0",
 		"swiftmailer/swiftmailer": "~5.4.1",
 		"league/oauth2-client": "~0.11.0",
-		"psr/log": "1.0.0",
-		"monolog/monolog": "~1.13.1",
-		"symfony/yaml": "~2.7.0",
-		"symfony/console": "~2.7.0",
 		"vend/resque": "~2.1.1",
 		"predis/predis": "~1.0.1",
 		"aws/aws-sdk-php": "~3.0.3",
 		"league/flysystem": "~1.0.4",
-		"container-interop/container-interop": "~1.1.0",
-		"mnapoli/php-di": "~4.4.7",
-		"symfony/http-foundation": "~2.7.0",
-		"doctrine/orm": "~2.5.0",
 		"beheh/flaps": "~0.1.0"
 	},
 	"require-dev": {
