--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,5 +1,19 @@
 AddDefaultCharset utf-8
 
+
+<IfModule mod_deflate.c>
+    <IfModule mod_filter.c>
+        AddOutputFilterByType DEFLATE text/html
+        AddOutputFilterByType DEFLATE text/plain
+        AddOutputFilterByType DEFLATE text/css
+        AddOutputFilterByType DEFLATE text/javascript
+        AddOutputFilterByType DEFLATE application/x-javascript
+        AddOutputFilterByType DEFLATE application/javascript
+        AddOutputFilterByType DEFLATE image/x-icon
+        AddOutputFilterByType DEFLATE application/json
+    </IfModule>
+</IfModule>
+
 DirectoryIndex index.php
 
 <IfModule mod_rewrite.c>
