--- a/composer.json
+++ b/composer.json
@@ -9,27 +9,27 @@
 		"ext-pdo": "*",
 		"ext-openssl": "*",
 		"ext-curl": "*",
-		"container-interop/container-interop": "~1.1.0",
-		"php-di/php-di": "~5.0.0",
-		"ocramius/proxy-manager": "~1.0",
-		"psr/log": "1.0.0",
-		"monolog/monolog": "~1.13.1",
-		"doctrine/orm": "~2.5.0",
-		"symfony/http-foundation": "~2.7.0",
-		"symfony/yaml": "~2.7.0",
-		"symfony/console": "~2.7.0",
-		"twig/twig": "~1.18",
-		"twig/extensions": "~1.2.0",
-		"swiftmailer/swiftmailer": "~5.4.1",
-		"league/oauth2-client": "~0.11.0",
-		"vend/resque": "~2.1.1",
-		"predis/predis": "~1.0.1",
-		"aws/aws-sdk-php": "~3.0.3",
-		"league/flysystem": "~1.0.4",
-		"beheh/flaps": "~0.1.0"
+		"container-interop/container-interop": "^1.0",
+		"php-di/php-di": "^5.0",
+		"ocramius/proxy-manager": "^1.0",
+		"psr/log": "^1.0",
+		"monolog/monolog": "^1.13",
+		"doctrine/orm": "^2.5",
+		"symfony/http-foundation": "^2.7",
+		"symfony/yaml": "^2.7",
+		"symfony/console": "^2.7",
+		"twig/twig": "^1.18",
+		"twig/extensions": "^1.2",
+		"swiftmailer/swiftmailer": "^5.4",
+		"league/oauth2-client": "^0.11",
+		"vend/resque": "^2.1",
+		"predis/predis": "^1.0",
+		"aws/aws-sdk-php": "^3.0",
+		"league/flysystem": "^1.0",
+		"beheh/flaps": "^0.1"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~4.7.2"
+		"phpunit/phpunit": "~4.7"
 	},
 	"suggest": {
 		"ext-gettext": "Localisation"
