--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 		"predis/predis": "^1.1",
 		"aws/aws-sdk-php": "^3.0",
 		"league/flysystem": "^1.0",
-		"beheh/flaps": "^0.1"
+		"beheh/flaps": "^0.1",
+		"sentry/sentry": "^1.5"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.7"
